[gd_scene load_steps=5 format=3 uid="uid://dap78qskwg0vf"]

[ext_resource type="Script" uid="uid://bdhvbsil170uy" path="res://GUI/scripts/mobile_GUI.gd" id="1"]

[sub_resource type="Resource" id="Resource_hshys"]
metadata/__load_path__ = "res://icon.png"

[sub_resource type="Resource" id="Resource_ck2mn"]
metadata/__load_path__ = "res://icon.png"

[sub_resource type="Resource" id="Resource_jb7uf"]
metadata/__load_path__ = "res://icon.png"

[node name="mobile_GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="dive" type="TouchScreenButton" parent="."]
self_modulate = Color(1, 1, 1, 0.141176)
top_level = true
position = Vector2(2.99998, -4)
scale = Vector2(6.95313, 10.0781)
texture_normal = SubResource("Resource_hshys")
action = "dive"

[node name="jump" type="TouchScreenButton" parent="."]
self_modulate = Color(1, 1, 1, 0.141176)
use_parent_material = true
position = Vector2(720, -4)
scale = Vector2(6.78125, 10.125)
texture_normal = SubResource("Resource_ck2mn")
shape_visible = false
action = "jump"

[node name="cast_ability" type="TouchScreenButton" parent="."]
position = Vector2(515, 113)
scale = Vector2(2.3125, 4.70313)
texture_normal = SubResource("Resource_jb7uf")
action = "play"

[connection signal="pressed" from="dive" to="." method="_on_dive_pressed"]
[connection signal="released" from="dive" to="." method="_on_dive_released"]
[connection signal="pressed" from="jump" to="." method="_on_jump_pressed"]
[connection signal="released" from="jump" to="." method="_on_jump_released"]
